--- a/html e css/prontocloud/css/style.css
+++ b/html e css/prontocloud/css/style.css
@@ -157,6 +157,22 @@ footer small {
     overflow: hidden !important;
 }
 
+@media (max-width: 1024px) {
+    header, 
+    section nav,
+    section article,
+    section #tenho-interesse,
+    footer    {
+        width: 100%;
+    }
+
+    .container {
+        padding-left: 1%;
+        padding-right: 1%;
+    }
+
+    
+}
 @media (max-width: 425px) {
     section nav,
     section article {
