--- a/html e css/prontocloud/css/style.css
+++ b/html e css/prontocloud/css/style.css
@@ -10,24 +10,25 @@ body {
 
 .main-container {
     display: block;
-    width: 100vw;
+    width: 100%;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .container {
     display: block;
     float: left;
-    padding: 20px;
-    max-width: 100%;
+    padding: 10px 40px;
     margin: 0 auto;
     max-width: 1198px;
+    width: 98%;
 }
 
 header {
     background: #fff;
     display: block;
     float: left;
-    padding: 20px;
+    padding: 20px 0;
     width: 100%;
     border-bottom: 1px solid #254159;
 }
@@ -70,7 +71,7 @@ img {
 }
 
 #tenho-interesse {
-    background-color: #b8c8d6;
+    background-color: #fff;
     width: 100%;
 }
 
@@ -95,11 +96,11 @@ ol li {
 }
 
 section {
-    background-color: #fff;
+    background-color: #eaeff3;
     display: block;
     float: left;
     font-size: 1.5rem; /* equivalente a 15px */ 
-    padding: 20px;
+    padding: 20px 0;
     width: 100%;
 }
 
@@ -138,7 +139,7 @@ footer {
     background-color: #254159;  
     display: block;
     float: left;
-    padding: 20px;
+    padding: 20px 0;
     width: 100%;
 }
 
@@ -183,4 +184,84 @@ footer small {
         padding-left: 1%;
         padding-right: 1%;
     }
+}
+
+#banner {
+    background-image: url(../images/banner.png);
+    background-repeat: no-repeat;
+    background-position: center;    
+    background-size: cover;
+    width: 100vw;
+    height: 60vh;
+}
+
+.legenda-container {
+    width: 30vw;
+    float: right;
+    margin: 10vh 10vh 0 0;
+}
+
+.legenda {
+    background-color: rgba(255, 255, 255, .6);
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 5rem;
+}
+
+.legenda h5,
+.legenda h4 {
+    color: #254159;
+    line-height: 150%;
+}
+
+.button-cta {
+    border-radius: 25px;
+    display: inline;
+    background-color: orangered;
+    color: #fff;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    box-shadow: 1px 1px 4px #454545;
+    padding: 10px 15px;
+    width: auto;
+    text-decoration: none;
+    font-weight: 300;
+    float: left;
+}   
+
+#saiba-mais {
+    background-color: #fff;
+    padding: 40px 0;
+}
+
+#saiba-mais p, 
+#saiba-mais img {
+    width: 45%;
+    display: block;
+    float: left;
+    padding: 20px 0;
+}
+
+#perguntas-frequentes {
+    background-color: #b8c8d6;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+dl {
+    margin: 20px 0;
+}
+
+dt {
+    font-family: 'Open Sans';
+    font-weight: 700;
+    font-size: 1.6rem;
+    color: #254159;
+    margin-bottom: 5px;
+}
+
+dd {
+    margin-left: 20px;
+    margin-bottom: 20px;
+    font-size: 1.4;
 }
